allow window to be created as child window of a given parent

--- a/src/window/Cargo.toml
+++ b/src/window/Cargo.toml
@@ -25,4 +25,5 @@ version = "0.14.0"
 [dependencies]
 shader_version = "0.2.1"
 #libc = "0.2.16"
-glutin = {path = 'D:\projects\forks\glutin'}
+#glutin = {path = 'D:\projects\forks\glutin'}
+glutin = {git = 'https://github.com/Boscop/glutin'}
